test/org/midica/testfiles/failing/block-reset-quantity.midica
INCLUDE inc/instruments.midica

( q=3
	0  c  /4
) q=2